infrastructure/external-services/synology-dsm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synology-dsm
spec:
  ports:
    - name: http
      port: 80
      targetPort: 5000
