infrastructure/external-services/synology-dsm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synology-dsm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - nas.mobol-homelab.net
      secretName: synology-dsm-tls

  rules:
    - host: nas.mobol-homelab.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synology-dsm
                port:
                  number: 80
